style.css
/*-------------Global Styles-------------*/

:root {
    /*Font Size Colors*/
    --black-bg: hsl(0, 0%, 8%); /*hsl is better practice to change dark/light*/
    --dark-grey-bg: hsl(0, 0%, 14%);
    --green-accent: hsl(153, 71%, 59%);
    --white-main-text: hsl(0, 0%, 100%); /*text-1*/
    --gray-text: hsl(0, 0%, 85%); /*text-2*/
    --red-invalid: hsl(7, 100%, 68%);
    /*Font Size Variables*/
    --fs-18: 1.125rem; /*font size ratios will adjust based on browser font*/ 
    --fs-88: 5.5rem; /*XL Heading*/
    --fs-72: 4.5rem; 
    --fs-40: 2.5rem; /*Mobile XL Heading*/
    --fs-48: 3rem; /*Large Heading*/
    --fs-32: 2rem; /*Mobile Large Heading*/
    --fs-24: 1.5rem;
    --container: 69.375rem; /*1110px divided by 16px auto size*/
    --transition: 250ms ease-in-out;
}

html {
    box-sizing: border-box; /*so that padding doesn't add width or height to the elements*/
    font-size: 100; /*takes browser based font styles*/
}

*, *::before, *::after{
    box-sizing: inherit;
}

body {
    margin: 0;
    font-family: 'Space Grotesk', sans-serif;
    background-color: var(--black-bg);
    color: var(--white-main-text);
    font-size: var(--fs-18);
    line-height: 1.56;
}

a {
    transition: color var(--transition);
}

a:hover {
    color: var(--green-accent);
}

.visuallyHidden { /*https://www.accessibility-developer-guide.com/examples/hiding-elements/visually/*/
    position: absolute;
    left:     -10000px;
    top:      auto;
    width:    1px;
    height:   1px;
    overflow: hidden;
}

.wrapper {
    width: calc(100% - 2rem); /*16 px margins on either size for mobile width*/
    max-width: var(--container);
    margin-inline: auto; /*centering*/
}

@media (min-width: 37.5em) {
    /*switching from mobile size to tablet passing 600px, use ems for break points in case broswer-based font-size was changed*/
    .wrapper {
        width: calc(100% - 3.75rem);
    }
}

/*-------------Header-------------*/
.header{
    margin-top: 20px; /*use rem mostly for text, px is okay for smaller stuff that doesn't need to scale*/
}

.headerNav{
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    text-align: center;
    gap: 20px 25px; /*row and column gap by flex*/
}

.headerHome {
    /*https://royalfig.github.io/fluid-typography-calculator/*/
    font-size: 1.5rem;
    font-size: clamp(1.5rem, 1.02rem + 2.04vw, 2rem);
    color: var(--white-main-text);
    text-decoration: none;
    flex: 1 0 100%;
}

.headerSocial svg { /*Inline block so that there's no underline next to icon hover*/
    display: block;
    /*outline: 2px solid red; //checking placement of icons, use outline instead of border because border adds to the size of the image*/
}

.headerSocial path {
    transition: fill var(--transition);
}

.headerSocial:hover path { /*svg:hover path OR a:hover > svg > path*/
    fill: var(--green-accent);
}

@media (min-width: 37.5em) {
    .headerNav{
        justify-content: flex-start;
        align-items: center;
        text-align: left;
        gap: 32px;
    }

    .headerHome{
        flex: 1;
        margin-inline-end: auto;
    }
}

/*-------------HERO-------------*/

.hero{

}

.heroWrapper {
    position: relative; /*so that image is relative to wrapper*/
}

.heroImage {
    position: absolute;
    left: 50%; /*move it 50% to left from where it was originally*/
    translate: -50%;
}

.heroText {

}

.heroDescription {

}

.heroContact {

}

